my hands are typing definitions

--- a/decloning.tex
+++ b/decloning.tex
@@ -1,2 +1,34 @@
-% problem formulation
-% algorithms
+%\newtheorem{clone set}[section]{Definition}
+\begin{defn}
+We say that non-empty $X \subseteq C$ is a clone set for preference profile $P = (\succ_1, ... , \succ_n)$ over $C$,
+if for each $k,l \in X$, each $a \in C \backslash X$ and each $1 \leq i \leq n $ it holds that
+$k \succ_i a$ iff $l \succ_i a$.
+\end{defn}
+
+%\newtheorem{decloning}[section]{Definition}
+\begin{defn}
+We call a decloning for preference profile $P$ over $C$
+such a partition of $C$  into $C_1, ... , C_k$
+that for each $1 \leq i \leq k$ $C_i$ is a clone set for $P$.
+\end{defn}
+
+
+
+
+\begin{problem}{Decloning}
+    Input: preference profile $P$, integer $k$
+
+    Question: Is there a decloning for $P$ with cardinality $k$?
+\end{problem}
+
+$$
+pos(i) =
+    \begin{cases}
+        \top & \text{if $i=0$ or } \exists X \in clones(i): p(i - \card{X}) \\
+        \bot & \text{otherwise.}
+    \end{cases}
+$$
+
+\begin{thm}
+\textsc{Decloning} is in $P$.
+\end{thm}
