--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,7 @@
 
 % preference list motivation
 
-
+Why elections are important.
 %Opinion aggregation is crucial in contemporary societes.
 %Ubiquitois democracy
 %Group decision making is crucial 
@@ -28,7 +28,7 @@ Our goal in this paper is to conceive methods of defending against attacking ele
 We are interested in stating whether such an attack took place.
 Given voters preferences, regardless of election system, we want to detect latent clone structures.
 
-%\section{Related Works}
+\section{Related Works}
 
 
 \section{The Structure of the Thesis}
@@ -37,9 +37,9 @@ Given voters preferences, regardless of election system, we want to detect laten
 
 This thesis has the following structure.
 Chapter 2 presents briefly basic mathematical and computational scientific concepts and facts to be used later.
-Chapter 3 formalizes definitions of elections and clones.
-Chapter 4 introduces decloning problem and gives polynomial-time algorithm for it.
-Chapter 5 contains study of imperfect clone structures:
+It also introduces formal definitions of elections.
+Chapter 3 introduces decloning problem and gives polynomial-time algorithm for it.
+Chapter 4 contains study of imperfect clone structures:
 it discusses error function for clone set families and optimal non-perfect decloning problem.
 For a sample error function we prove that optimal decloning is \textit{NP}-complete.
-Finally, section 6 summarizes thesis results, gives real-life consequences and indicates opportunities for further works.
+Finally, chapter 5 summarizes thesis results, gives real-life consequences and indicates opportunities for further works.
