--- a/elections.tex
+++ b/elections.tex
@@ -1,28 +1,15 @@
-\newtheorem{preference}{Definition}
-\begin{preference}
+\begin{defn}
 Given a finite candidate set $C$ a preference order over $C$
 is~a~total order over $C$.
-\end{preference}
+\end{defn}
 
-\newtheorem{preference profile}[preference]{Definition}
-\begin{preference profile}
+%\newtheorem{preference profile}[preference]{Definition}
+\begin{defn}
 Preference profile $P = (\succ_1, ... , \succ_n)$ for given candidate set $C$
 is a sequence of $n$ preference orders over $C$,
 where each $\succ_i, 1 \leq i \leq n$ represents preference order of $i$-th voter.
-\end{preference profile}
+\end{defn}
 
-\newtheorem{clone set}[preference]{Definition}
-\begin{clone set}
-We say that non-empty $X \subseteq C$ is a clone set for preference profile $P = (\succ_1, ... , \succ_n)$ over $C$,
-if for each $k,l \in X$, each $a \in C \backslash X$ and each $1 \leq i \leq n $ it holds that
-$k \succ_i a$ iff $l \succ_i a$.
-\end{clone set}
 
-\newtheorem{decloning}[preference]{Definition}
-\begin{decloning}
-We call a decloning for preference profile $P$ over $C$
-such a partition of $C$  into $C_1, ... , C_k$
-that for each $1 \leq i \leq k$ $C_i$ is a clone set for $P$.
-\end{decloning}
 
-Example.
+%Example.
