--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -16,12 +16,12 @@
 
 \usepackage{amsmath}
 \newcommand{\card}[1]{\ensuremath{\left\|#1\right\|}}
-
-
+\usepackage{amssymb}
 \usepackage{amsthm}
 
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[chapter] % reset theorem numbering for each chapter
+\newtheorem{prp}[thm]{Property}
 
 \theoremstyle{definition}
 \newtheorem{defn}[thm]{Definition} % definition numbers are dependent on theorem numbers
