--- a/decloning.tex
+++ b/decloning.tex
@@ -1,18 +1,17 @@
-%\newtheorem{clone set}[section]{Definition}
-\begin{defn}
+We are interested in a situation when some candidates are indistinguishable for voters.
+In that case every voter ranks them consecutively.
+
+\begin{defn}[clone set]
 We say that non-empty $X \subseteq C$ is a clone set for preference profile $P = (\succ_1, ... , \succ_n)$ over $C$,
 if for each $k,l \in X$, each $a \in C \backslash X$ and each $1 \leq i \leq n $ it holds that
 $k \succ_i a$ iff $l \succ_i a$.
 \end{defn}
 
-%\newtheorem{decloning}[section]{Definition}
-\begin{defn}
+\begin{defn}[decloning]
 We call a decloning for preference profile $P$ over $C$
 such a partition of $C$  into $C_1, ... , C_k$
 that for each $1 \leq i \leq k$ $C_i$ is a clone set for $P$.
 \end{defn}
-
-
 
 
 \begin{problem}{Decloning}
