--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,6 @@
 
 % preference list motivation
-
-Why elections are important.
+%Why elections are important.
 %Opinion aggregation is crucial in contemporary societes.
 %Ubiquitois democracy
 %Group decision making is crucial 
@@ -9,7 +8,7 @@ Why elections are important.
 \section{Attacking Elections with Clones}
 
 
-Let us imagine single-round presidential elections.
+Let us imagine a single-round presidential elections.
 According to sounding there are two considerable candidates: $A$ and $B$.
 Candidate $B$ is given lesser chances of winning.
 However, he exploits the fact that $A$ has a twin brother $C$.
