--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -4,6 +4,8 @@
 %\usepackage[polish]{babel}
 \usepackage[T1]{fontenc}
 %\usepackage[latin2]{inputenc} 
+\usepackage{fullpage}
+\linespread{1.3}
 
 
 %\usepackage[unicode]{hyperref}
@@ -22,6 +24,7 @@
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}[chapter] % reset theorem numbering for each chapter
 \newtheorem{prp}[thm]{Property}
+\newtheorem{lmm}[thm]{Lemma}
 
 \theoremstyle{definition}
 \newtheorem{defn}[thm]{Definition} % definition numbers are dependent on theorem numbers
