--- a/decloning.tex
+++ b/decloning.tex
@@ -1,3 +1,10 @@
+In this chapter we formalize notions connected to elections and clones.
+We also introduce the problem of detecting clones and show an efficient algorithm for that.
+
+\section{Elections} \input{"elections.tex"}
+
+\section{Decloning}
+
 We are interested in a situation when some candidates are indistinguishable for voters.
 In that case every voter ranks them consecutively.
 
