--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -67,9 +67,7 @@ Finally, we prove that optimal decloning for~sample error function is $NP$-compl
 
 \chapter{Introduction} \input{"introduction.tex"}
 \chapter{Preliminaries} \input{"preliminaries.tex"}
-%\chapter{Elections}	\input{"elections.tex"}
-
-\chapter{Decloning} \input{"decloning.tex"}
+\chapter{Clones in Elections} \input{"decloning.tex"}
 \chapter{Imperfect Clones} \input{"imperfect.tex"}
 
 \chapter{Summary} \input{"summary.tex"}
