--- a/imperfect.tex
+++ b/imperfect.tex
@@ -7,6 +7,9 @@ Given a preference profile $P$ over $C$ we say that a function $f: 2^C \rightarr
 is a clone set error function for $P$ when $f(X) = 0$ iff $X$ is a clone set for $P$.
 \end{defn}
 
+
+\section{General Problem}
+
 \begin{problem}{OptimalDecloning}
 	Input: Preference profile $P$ over $C$, clone set error function $f$,
 		integer $k$, positive real number $l$.
@@ -36,3 +39,5 @@ Subset $X$ is thus not a clone set for $P$.
 \begin{proof}[Proof of \ref{optdecl}]
 We will show a reduction from the \textsc{X3C} problem.
 \end{proof}
+
+\section{Specific Error Functions}
