--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,7 @@
-
-% preference list motivation
-%Why elections are important.
-%Opinion aggregation is crucial in contemporary societes.
-%Ubiquitois democracy
-%Group decision making is crucial 
+Elections is a situation when a set of voters collaboratively chooses one or many winners from multiple candidates.
+%Group decision making / opinion aggregation is crucial in contemporary societes.
 
 \section{Attacking Elections with Clones}
-
 
 Let us imagine a single-round presidential elections.
 According to sounding there are two considerable candidates: $A$ and $B$.
