--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1,8 +1,10 @@
 In this chapter we present briefly basic concepts and facts to be used later in the thesis.
-It is divided into three sections.
+It is divided into two sections.
 First one is a short revision of necessary mathematics.
-Second section build intuition regarding computational complexity theory.
-Finally in the last section we formally introduce notions connected to cloning in elections.
+Second section revises basics and builds intuition regarding computational complexity theory.
+It also introduces some $NP$-complete computational problems for further use.
+
+This chapter might be skipped and used as a reference only when necessary.
 
 \section{Mathematics}
 
@@ -155,4 +157,4 @@ We thus get that each partition has less than $l$ internal edges,
 so the answer to the \textsc{GraphPartition} problem remains no.
 \end{proof}
 
-\section{Elections} \input{"elections.tex"}
+% circuit
