--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -7,6 +7,7 @@
 \usepackage{fullpage}
 \linespread{1.3}
 
+\usepackage[nottoc]{tocbibind}
 
 %\usepackage[unicode]{hyperref}
 
@@ -69,20 +70,11 @@ Finally, we prove that optimal decloning for~sample error function is $NP$-compl
 \chapter{Preliminaries} \input{"preliminaries.tex"}
 \chapter{Clones in Elections} \input{"decloning.tex"}
 \chapter{Imperfect Clones} \input{"imperfect.tex"}
-
 \chapter{Summary} \input{"summary.tex"}
 
 
-
-\begin{thebibliography}{9}
-
-%\bibitem{lamport94}
-%  Leslie Lamport,
-%  \emph{\LaTeX: A Document Preparation System}.
-%  Addison Wesley, Massachusetts,
-%  2nd Edition,
-%  1994.
-
-\end{thebibliography}
+\nocite{*}
+\bibliographystyle{plain}
+\bibliography{bib}
 
 \end{document}
