--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -31,6 +31,9 @@
 \newtheorem{defn}[thm]{Definition} % definition numbers are dependent on theorem numbers
 \newtheorem{exmp}[thm]{Example} % same for example numbers
 
+\theoremstyle{remark}
+\newtheorem{rmrk}[thm]{Remark}
+
 
 \author{Szymon Gut\\\newline\\supervisor:\\dr hab. inż. Piotr Faliszewski}
 
