--- a/elections.tex
+++ b/elections.tex
@@ -18,11 +18,11 @@ where each $\succ_i, 1 \leq i \leq n$ represents preference order of $i$-th vote
 
 
 \begin{exmp}
-For a candidate set $C = \{1, 2, 3, 4\}$ we have that $P = (\succ_1, \succ_2, \succ_3)$ with
+For a candidate set $C = \{a, b, c, d\}$ we have that $P = (\succ_1, \succ_2, \succ_3)$ with
 \begin{align*}
-1 \succ_1 2 \succ_1 3 \succ_1 4 \\
-2 \succ_2 4 \succ_2 3 \succ_2 1	\\
-1 \succ_3 2 \succ_3 4 \succ_3 3
+a \succ_1 b \succ_1 c \succ_1 d \\
+b \succ_2 d \succ_2 c \succ_2 a	\\
+a \succ_3 b \succ_3 d \succ_3 c
 \end{align*}
 is a preference profile over $C$.
 \end{exmp}
