--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -24,6 +24,8 @@ such that for every $a \in X$ there is exactly one $Y \in F$ such that $a \in Y$
 \end{defn}
 
 
+Let us revise some notions from graph theory.
+
 \begin{defn}[graph]
 A graph $G$ is an ordered pair $(V,E)$ of set $V$ of nodes
 and set $E$ of edges, which are 2-element subsets of $V$.
@@ -43,18 +45,21 @@ and multiset $E$ of edges, which are 2-element subsets of $V$.
 %\end{defn}
 
 
+This theorem states that prime number are dense in an informal sense.
+
 \begin{thm}[Bertrand–Chebyshev]
 For any integer $n>1$ there always exists at least one prime $p$ such that $n < p < 2n$.
 \end{thm}
 
 
+The following are definitions necessary to formulate the Karamata's inequality.
 
 \begin{defn}[strictly convex function]
 We say that a function $f:\mathbb{R}\rightarrow\mathbb{R}$ is strictly convex on an interval $I \subset \mathbb{R}$
 if for each $x_1, x_2 \in I$ and $t \in [0,1]$ occurs $f(t x_1 + (1-t) x_2) < tf(x_1) + (1-t)f(x_2)$.
 \end{defn}
 
-The following is a convenient way of proving that a function is strictly convex.
+The next property is a convenient way of proving that a function is strictly convex.
 
 \begin{prp}
 A twice differentiable function $f:\mathbb{R}\rightarrow\mathbb{R}$
@@ -72,6 +77,8 @@ if the following conditions are met:
 	\item $\sum_{i=1}^k a_i \geq \sum_{i=1}^k b_i$ $\forall k \in \{ 1, ..., n\}$.
 \end{itemize}
 \end{defn}
+
+Finally the Karamata's inequality that formalizes a very intuitive phenomenon.
 
 \begin{thm}[Karamata's inequality] \label{thm:Kar}
 If function $f:\mathbb{R}\rightarrow\mathbb{R}$ is strictly convex on interval~$I \subset \mathbb{R}$,
