OptimalDecloning NP-completeness proof

--- a/decloning.tex
+++ b/decloning.tex
@@ -7,6 +7,7 @@ We also introduce the problem of detecting clones and show an efficient algorith
 
 We are interested in a situation when some candidates are indistinguishable for voters.
 In that case every voter ranks them consecutively.
+% TODO: consecutive ranking as a remark
 
 \begin{defn}[clone set]
 We say that non-empty $X \subseteq C$ is a clone set for preference profile $P = (\succ_1, ... , \succ_n)$ over $C$,
@@ -34,7 +35,7 @@ we have that each $c \in C$ and $C$ itself is a clone set.
 
 \begin{defn}[trivial clone set]
 Given a candidate set $C$ we say that $X$ is a trivial clone set
-when $X \in C$ or $X = C$.
+when $\left\vert{X}\right\vert = 1$ or $X = C$.
 \end{defn}
 
 \begin{exmp}
