--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -97,7 +97,7 @@ $\sum_{i=1}^n f(a_i) > \sum_{i=1}^n f(b_i)$.
 \begin{problem}{Exact3Cover (X3C)}
 	Input: Collection $S$ of three-element subsets of set $X$, $\vert{X}\vert = 3n$.
 
-	Question: Is there an $n$-element subset $A \subset S$ such that $\bigcup A = S$?
+	Question: Is there an $n$-element subset $A \subset S$ such that $\bigcup A = X$?
 \end{problem}
 
 \begin{thm}
