--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -17,10 +17,14 @@ A total order over set $X$ is a binary relation $\succ$ on $X$ which~is:
 \end{itemize}
 \end{defn}
 
-
 \begin{defn}[set partition]
 A partition of a set $X$ is a family $F$ of non-empty subsets of $X$
 such that for every $a \in X$ there is exactly one $Y \in F$ such that $a \in Y$.
+\end{defn}
+
+\begin{defn}[predicate]
+A predicate is a function $f$ with a codomain $\{true, false\}$,
+where $true$ is a logical truth and $false$ its negation.
 \end{defn}
 
 
