--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -7,6 +7,9 @@
 \usepackage{fullpage}
 \linespread{1.3}
 
+% generate index
+\usepackage[hidelinks]{hyperref}
+
 \usepackage[nottoc]{tocbibind}
 
 %\usepackage[unicode]{hyperref}
