added \abs{} macro

--- a/decloning.tex
+++ b/decloning.tex
@@ -34,7 +34,7 @@ we have that each $c \in C$ and $C$ itself is a clone set.
 
 \begin{defn}[trivial clone set]
 Given a candidate set $C$ we say that $X$ is a trivial clone set
-when $\left\vert{X}\right\vert = 1$ or $X = C$.
+when $\abs{X} = 1$ or $X = C$.
 \end{defn}
 
 \begin{exmp}
