--- a/detecting-clones.tex
+++ b/detecting-clones.tex
@@ -42,6 +42,7 @@
 \theoremstyle{remark}
 \newtheorem{rmrk}[thm]{Remark}
 
+\newcommand{\abs}[1]{\left\vert #1 \right\vert}
 
 \author{Szymon Gut\\\newline\\supervisor:\\dr hab. inż. Piotr Faliszewski}
 
